After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780709 - [PATCH] gexiv2 0.10.5 compilation fails: error: ‘overflow_error’ is not a member of ‘std’
[PATCH] gexiv2 0.10.5 compilation fails: error: ‘overflow_error’ is not a mem...
Status: RESOLVED FIXED
Product: gexiv2
Classification: Other
Component: build
0.10.x
Other Linux
: Normal normal
: ---
Assigned To: Gexiv2 Maintainers
Gexiv2 Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-29 22:41 UTC by Sebastian Pipping
Modified: 2017-04-05 18:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing include (1.05 KB, patch)
2017-04-05 18:15 UTC, Jens Georg
none Details | Review

Description Sebastian Pipping 2017-03-29 22:41:56 UTC
Hi!


gexiv2 release 0.10.5 fails compilation with:

[..]
gexiv2/gexiv2-metadata-gps.cpp: In function ‘double convert_rational(const Rational&)’:
gexiv2/gexiv2-metadata-gps.cpp:29:15: error: ‘overflow_error’ is not a member of ‘std’
         throw std::overflow_error("Invalid fraction");
               ^
[..]


There is a patch by Markus Moll at

  https://613778.bugs.gentoo.org/attachment.cgi?id=468340

that works well for me.  It was introduces at

  https://bugs.gentoo.org/show_bug.cgi?id=613778#c4

Please consider its application.  Thanks and best



Sebastian
Comment 1 Jens Georg 2017-03-30 06:37:15 UTC
Thanks
Comment 2 Jens Georg 2017-04-05 18:15:42 UTC
Created attachment 349315 [details] [review]
Add missing include

And while at it, use a more fitting exception

Signed-off-by: Jens Georg <mail@jensge.org>
Comment 3 Jens Georg 2017-04-05 18:48:03 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.