Add missing include

And while at it, use a more fitting exception

Signed-off-by: Jens Georg <mail@jensge.org>

https://bugzilla.gnome.org/show_bug.cgi?id=780709
https://bugs.gentoo.org/show_bug.cgi?id=613778